--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.1"
+    "ejs": "^1.0.0",
+    "express": "^4.6.1"
   }
 }
