--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^1.0.0",
-    "express": "^4.6.1"
+    "express": "^4.6.1",
+    "mongoose": "^4.0.7"
   }
 }
